[package]
name = "sani"
version = "0.1.0"
edition = "2021"
authors = ["lilagelb"]
description = "A command-line Markdown renderer."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.0"
clap = { version = "4.3.21", features = ["cargo"] }
exitcode = "1.1.2"